Added enums, models and api models needed for cardcheckout kit

--- a/CommonDataModelsKit-iOS/Podfile
+++ b/CommonDataModelsKit-iOS/Podfile
@@ -9,4 +9,5 @@ target 'CommonDataModelsKit-iOS' do
   pod 'TapAdditionsKitV2'
   pod 'SwiftyRSA'
   pod 'TapKeychain'
+  pod 'TapCardVlidatorKit-iOS'
 end
